// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie List should render 5 items in flatlist 1`] = `
<withTheme(Surface)>
  <FlatList
    data={
      Array [
        Object {
          "title": "Avengers 1",
        },
        Object {
          "title": "Avengers 2",
        },
        Object {
          "title": "Avengers 3",
        },
        Object {
          "title": "X-men 1",
        },
        Object {
          "title": "X-men 2",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</withTheme(Surface)>
`;

exports[`Movie List should render correctly 1`] = `
<withTheme(Surface)>
  <FlatList
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</withTheme(Surface)>
`;
